--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+"engines": {
+    "node": "v12.14.0",
+    "npm": "6.13.4"
+  },
   "eslintConfig": {
     "extends": "react-app"
   },
